# NeuroGen

./: .gitignore  CMakeLists.txt  readme.md
doc/: Doxyfile  Doxyfile.in
include/Game/: Game.hpp
include/Genetic/: Evolution.hpp
include/NeuroWeb/: Layer.hpp  NeuroWeb.hpp  Neuron.hpp
src/NeuroWeb/: Layer.cpp  NeuroWeb.cpp  Neuron.cpp
